2018-10-01  Stipe Tolj  <stolj at kannel.org>
    * gw/bb_boxc.c: use init_smsbox_routes() for initial and reload cases, use
      smsbox_restart() to reload smsbox routing.
    * gw/bb_http.c: interpret bb_graceful_restart() outcome in HTTP admin command
      function httpd_graceful_restart().
    * gw/bearerbox.c: use gw_log_force() for starting/stopping log evetns that
      we want to see in the log, no matter waht log-level is used (forced),
      reload config in bb_graceful_restart() and call the sub-module reload
      functions.
    * gw/bearebox.h: change prototype for smsc2_graceful_restart().
    Thhis patchsets implement the reloading (aka graceful restart) capabilities
    for the MO direction smsbox routing groups.

2018-09-26 Alexander Malysh <amalysh @ kannnel.org>
    * gwlib/date.[ch]: added handling of fraction

2018-09-26 Alexander Malysh <amalysh @ kannnel.org>
    * gwlib/date.[ch]: added handling of timezone

2018-09-25  Stipe Tolj  <stolj at kannel.org>
   * gwlib/http.c: fixing PANIC condition within conn_unregister() in case the
     connection was destroyed already.
     [Msg-Id: <5B964593.1070105@kannel.org>]
     
2018-09-07 Alexander Malysh <amalysh @ kannnel.org>
   * gw/smsc/smsc_http.c, gw/smsc/smsc_http_p.h, gw/smsc/http/*.c: moved kannel
     callbacks to gw/smsc/http/kannel.c. Added gw/smsc/http/*.c to Makefile.am
     and use new gw_dlopen_get_symbol to get callback symbols.

2018-09-07 Alexander Malysh <amalysh @ kannnel.org>
   * gwlib/gw-dlopen.[ch]: added simple dlopen lookup functionality.

2018-09-07  Stipe Tolj  <stolj at kannel.org>
   * configure.in: removing own binary suffix handling, automake provides an own
     construct for this.
     [https://www.gnu.org/software/automake/manual/automake.html#Renaming]
     
2018-09-04  Stipe Tolj  <stolj at kannel.org>
   * test/test_http.c: fix compiler warnings. NLC.
   
2018-09-04  Stipe Tolj  <stolj at kannel.org>